--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -177,3 +177,15 @@ html, body {
     display: none !important;
   }
 }
+
+// Add support for basic 12 column grid
+
+@include susy-classes;
+
+// Reset those columns at the smallest breakpoint.
+@include at-breakpoint($small) {
+  [class^="span-"] {
+    @include reset-columns;
+    display: block;
+  }
+}
