--- a/lib/canon/stylesheets/_layout.scss
+++ b/lib/canon/stylesheets/_layout.scss
@@ -166,8 +166,7 @@ html, body {
 }
 
 // Add support for basic 12 column grid
-
-@include susy-classes;
+@include grid-classes;
 
 // Reset those columns at the smallest breakpoint.
 @include at-breakpoint($small) {
