--- a/lib/canon/stylesheets/_mixins.scss
+++ b/lib/canon/stylesheets/_mixins.scss
@@ -66,7 +66,7 @@
   }
 }
 
-@mixin susy-classes($silent: false) {
+@mixin grid-classes($silent: false) {
   $base: if($silent, '%', '.');
   $selector: '#{$base}span';
 
@@ -93,3 +93,4 @@
       }
     }
   }
+}
