--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -5,7 +5,7 @@
 	background: #333;
 	@include fixed-top();
 
-	.l-content > .nav {
+	.l-container > .nav {
 		margin: 2px 0 0 0;
 		float: right;
 		& > li {
