[Feature][87] Reskin Navigation
Merge branch 'reskin-navigation'

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -2,12 +2,15 @@ html, body {
   height: 100%;
 }
 
+body {
+  @include noise;
+}
+
 .l-wrapper {
   min-height: 100%;
   height: auto !important;
   height: 100%;
   margin: 0 auto (-$app-footer-height);
-  background: #ddd;
 }
 
 // .l-push must be the same height as .l-footer
