--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -13,9 +13,10 @@ $yellow: #ff9d00;
 $green: #00a96d;
 $blue: #1e6ec1;
 
-$base-font-family: 'Arial', sans-serif;
+$base-font-family: 'Helvetica Neue', sans-serif;
 $base-font-size: 13px;
 $base-line-height: 20px;
+$alt-font-family: 'Source Sans Pro', $base-font-family;
 
 // The Grid
 
@@ -51,11 +52,11 @@ $xlarge-padding: 60px;
 
 // Layout
 
-$app-nav-primary-height: 58px;
-$app-nav-secondary-height: 32px;
-$app-nav-utility-height: 40px;
+$app-nav-primary-height: 90px;
+$app-nav-secondary-height: 35px;
+$app-nav-utility-height: 25px;
 $app-header-height: $app-nav-primary-height + $app-nav-utility-height;
-$app-footer-height: 40px;
+$app-footer-height: 35px;
 
 // Patterns
 
