--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -1,25 +1,32 @@
 // Utility Nav
 .nav-utility {
-	height: $app-nav-utility-height;
+	min-height: $app-nav-utility-height;
 	font-size: 12px;
 	background: #333;
 	@include fixed-top();
 
 	.l-container > .nav {
-		margin: 2px 0 0 0;
-		float: right;
+		float: left;
+
 		& > li {
 			position: relative;
-			margin: 0 0 0 10px;
+			margin: 0 30px 0 0;
 			& > a {
-				padding: 7px 10px;
+				padding: 2px 0 1px;
 				color: #999;
 				position: relative;
-				top: 1;
 				border: 1px solid transparent;
 				&:hover {
 					color: #ccc;
 				}
+			}
+		}
+
+		&.pull-right {
+			float: right;
+
+			& > li {
+				margin: 0 0 0 30px;
 			}
 		}
 	}
