--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -63,10 +63,8 @@ body {
 
   & > div {
     background: $white;
-    border: 1px solid #CCC;
-    padding: 30px;
-    min-height: 100px;
-    padding: 30px;
+    box-shadow: 0px 6px 8px 1px #c2c2c2;
+    min-height: 120px;
   }
 
   .sidebar + & {
