--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -55,6 +55,14 @@ body {
 
   &.pull-right {
     @include span-columns(3 omega,12);
+
+    & > div {
+      min-height: 40px;
+      margin-top: 20px;
+      background: #F5F5F5;
+      box-shadow: 0px 6px 8px 1px #c2c2c2;
+      padding: 30px;
+    }
   }
 }
 
