--- a/lib/stylesheets/_mixins.scss
+++ b/lib/stylesheets/_mixins.scss
@@ -67,32 +67,48 @@
 }
 
 @mixin grid-classes($silent: false) {
-  $base: if($silent, '%', '.');
-  $selector: '#{$base}span';
+  @include with-grid-settings(12, 75px, 20px, 40px) {
+    $base: if($silent, '%', '.');
+    $selector: '#{$base}span';
 
-  @if $silent { #{$selector} { @include span-columns(1); } }
-  @else { [class^="span-"] { @include span-columns(1); } }
+    @if $silent { #{$selector} { @include span-columns(1); } }
+    @else { [class^="span-"] { @include span-columns(1); } }
 
-  #{$base}row, #{$base}full { @include micro-clearfix; @include reset-columns;}
-  #{$base}omega { @include omega; }
+    #{$base}row, #{$base}full { @include micro-clearfix; @include reset-columns;}
+    #{$base}omega { @include omega; }
 
-  @for $span from 1 through $total-columns {
-    $span-selector: '#{$selector}-#{$span}';
-    @for $context from 1 through $total-columns {
-      $total-selector: '#{$span-selector}-#{$context}';
-      $total-selector: if($context == $total-columns, '#{$span-selector}, #{$total-selector}', $total-selector);
-      @if $context > $span {
-        #{$total-selector} {
-          @if $silent { @extend #{$selector}; }
-          width: columns($span, $context);
-        }
-      } @else {
-        @if $context == $span {
-          #{$total-selector} { @include micro-clearfix; @include reset-columns;}
+    @for $span from 1 through $total-columns {
+      $span-selector: '#{$selector}-#{$span}';
+      @for $context from 1 through $total-columns {
+        $total-selector: '#{$span-selector}-#{$context}';
+        $total-selector: if($context == $total-columns, '#{$span-selector}, #{$total-selector}', $total-selector);
+        @if $context > $span {
+          #{$total-selector} {
+            @if $silent { @extend #{$selector}; }
+            width: columns($span, $context);
+          }
+        } @else {
+          @if $context == $span {
+            #{$total-selector} { @include micro-clearfix; @include reset-columns;}
+          }
         }
       }
     }
-  }
+    // Reset columns at the smallest breakpoint.
+    @include at-breakpoint($small) {
+      [class^="span-"] {
+        @include reset-columns;
+        display: block;
+      }
+    }
+
+    .bleed-left {
+      @include bleed($sides: left);
+    }
+    .bleed-right {
+      @include bleed($sides: right);
+    }
+  };
 }
 
 @mixin seam($top: #DDD, $bottom: #F5F5F5) {
