include display block for reset columns

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -163,6 +163,7 @@ body {
   }
 
   .content, .sidebar + .content, .sidebar.pull-right + .content {
+    display: block;
     @include reset-columns;
   }
 
