add explicit inner divs for inner-padding
note: this is because box-sizing support is off, padding on sidebar and
content directly will break the grid.

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -58,7 +58,6 @@ body {
 
   &.pull-right {
     @include span-columns(3 omega,12);
-    padding: 0 30px;
   }
 }
 
@@ -79,6 +78,10 @@ body {
   .sidebar.pull-right + & {
     @include remove-omega;
   }
+}
+
+.content-inner, .sidebar-inner {
+  padding: 0 30px;
 }
 
 // height based media query to remove app-frame for shorter view ports
