use sidebar-inner instead, remove content-inner
If we need content-inner I can add it back. But I think our content
sections handle it already.

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -59,6 +59,14 @@ body {
   &.pull-right {
     @include span-columns(3 omega,12);
   }
+
+  .sidebar-inner {
+    padding-left: 30px;
+
+    .panel & {
+      padding: 0 30px;
+    }
+  }
 }
 
 .content {
@@ -78,10 +86,6 @@ body {
   .sidebar.pull-right + & {
     @include remove-omega;
   }
-}
-
-.content-inner, .sidebar-inner {
-  padding: 0 30px;
 }
 
 // height based media query to remove app-frame for shorter view ports
