use sidebar-inner instead, remove content-inner
If we need content-inner I can add it back. But I think our content
sections handle it already.

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -71,6 +71,14 @@ body {
       padding: 0 30px;
     }
   }
+
+  .sidebar-inner {
+    padding-left: 30px;
+
+    .panel & {
+      padding: 0 30px;
+    }
+  }
 }
 
 .content {
