--- a/lib/stylesheets/patterns/_footer.scss
+++ b/lib/stylesheets/patterns/_footer.scss
@@ -1,5 +1,3 @@
-// footer
-
 .footer {
   color: #999;
   font-size: 12px;
@@ -16,26 +14,18 @@
 
   .links {
     margin: 0;
-    float: left;
     padding: 7px 0;
+    float: left;
     list-style: none;
 
     & > li {
+      padding: 0 0 0 10px;
       float: left;
-      padding: 0 0 0 5px;
-      & > a {
-        display: inline-block;
-      }
-      &:before {
-        content: "\2022";
-        padding-right: 5px;
-      }
-      &:first-child {
-        padding-left: 0;
-        &:before {
-          content: "";
-        }
-      }
+    }
+
+    & > li + li:before {
+      padding-right: 10px;
+      content: "\2022";
     }
   }
 }
