refactor main content and sidebar, grid, and layout file

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -10,7 +10,10 @@
 @import "base";
 @import "layout";
 @import "utilities";
+@import "grid";
 
+@import "patterns/main";
+@import "patterns/main-responsive";
 @import "patterns/buttons";
 @import "patterns/content-view";
 @import "patterns/forms";
