--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -18,10 +18,10 @@
   @include span-columns(3,12);
 
   .inner {
-    padding: 30px 30px 30px 0;
+    padding: 0 30px 0 0;
 
     .panel & {
-      padding-left: 30px;
+      padding: 30px;
     }
   }
 
@@ -29,9 +29,9 @@
     @include span-columns(3 omega,12);
 
     .inner {
-      padding: 30px 0 30px 30px;
+      padding: 0 0 0 30px;
       .panel & {
-        padding-right: 30px;
+        padding: 30px;
       }
     }
   }
