[Feature][97] Add Tooltip component.

--- a/lib/stylesheets/patterns/_tooltip.scss
+++ b/lib/stylesheets/patterns/_tooltip.scss
@@ -1,7 +1,10 @@
 .tooltip {
-  display: none;
   position: absolute;
   z-index: 1030;
+
+  &.hidden {
+    display: none;
+  }
 }
 
 .tooltip-inner {
