--- a/lib/stylesheets/patterns/_content-view.scss
+++ b/lib/stylesheets/patterns/_content-view.scss
@@ -21,8 +21,9 @@
 
 .content-section-title {
   margin: 0 10px 0 0;
-  font-size: 18px;
-  font-weight: bold;
+  font-family: $alt-font-family;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .content-section-subtitle {
@@ -46,17 +47,19 @@
 
 .header-section-title,
 .header-section-subtitle {
-  font-weight: bold;
+  font-family: $alt-font-family;
 }
 
 .header-section-title {
-  font-size: 24px;
+  font-size: 32px;
+  font-weight: 600;
 }
 
 .header-section-subtitle {
   margin: 0 0 5px;
   color: $grey;
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
