--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -30,20 +30,27 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
-h1, h2 {
+h1, h2, h3 {
   margin: 0 0 $base-line-height;
+  font-weight: 600;
   line-height: $base-line-height * 1.5;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 32px;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 28px;
 }
 
 h3 {
+  font-size: 22px;
+}
+
+h4 {
+  font-size: 14px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
