[Feature][41] Extract mixin for animating visibility.

--- a/lib/stylesheets/patterns/_tooltip.scss
+++ b/lib/stylesheets/patterns/_tooltip.scss
@@ -1,24 +1,8 @@
 .tooltip {
   position: absolute;
   z-index: 1030;
-  display: none;
-  visibility: hidden;
-  opacity: 0;
 
-  @include transition-property(visibility, opacity);
-  @include transition-duration(0.2s, 0.2s);
-
-  &.hidden {
-    display: block;
-    visibility: hidden;
-    opacity: 0;
-  }
-
-  &.visible {
-    display: block;
-    visibility: visible;
-    opacity: 1;
-  }
+  @include animate-visibility;
 }
 
 .tooltip-inner {
