--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -1,14 +1,8 @@
-// Category
-// Link
-// Link (External)
-// Caption
-
 .dropdown {
   display: inline-block;
 }
 
 .dropdown-menu {
-  display: none;
   position: absolute;
   margin: 0;
   padding: 0 0 15px;
@@ -16,14 +10,12 @@
   background-color: #fff;
   border-top: 2px solid $red;
   list-style: none;
+  z-index: 1020;
 
+  @include animate-visibility;
   @include border-corner-radius(bottom, left, 3px);
   @include border-corner-radius(bottom, right, 3px);
   @include box-shadow(0 0 9px 2px rgba(0, 0, 0, 0.2));
-
-  &.visible {
-    display: block;
-  }
 
   a {
     display: block;
