--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -33,47 +33,49 @@
 }
 
 /** Primary Menu **/
-.primary-dropdown .dropdown-menu {
-  padding: 0 0 15px;
-  border: 0;
-  border-top: 2px solid $red;
+.primary-dropdown {
+  .dropdown-menu {
+    padding: 0 0 15px;
+    border: 0;
+    border-top: 2px solid $red;
 
-  @include border-radius(0);
-  @include border-corner-radius(bottom, left, 3px);
-  @include border-corner-radius(bottom, right, 3px);
+    @include border-radius(0);
+    @include border-corner-radius(bottom, left, 3px);
+    @include border-corner-radius(bottom, right, 3px);
 
-  a {
-    padding: 2px 15px;
-    color: #333;
-    font-family: $alt-font-family;
-    font-size: 16px;
-    font-weight: 600;
-    text-decoration: none;
+    a {
+      padding: 2px 15px;
+      color: #333;
+      font-family: $alt-font-family;
+      font-size: 16px;
+      font-weight: 600;
+      text-decoration: none;
 
-    &:hover,
-    &.hover {
-      color: $red;
-      background-color: #f5f5f5;
+      &:hover,
+      &.hover {
+        color: $red;
+        background-color: #f5f5f5;
+      }
+    }
+
+    .icon-external {
+      margin-left: 5px;
     }
   }
 
-  .icon-external {
-    margin-left: 5px;
+  .dropdown-category {
+    margin: 15px 0 0;
+    padding: 0 15px;
+    font-family: $alt-font-family;
+    font-size: 12px;
+    font-weight: 400;
   }
-}
 
-.primary-dropdown .dropdown-category {
-  margin: 15px 0 0;
-  padding: 0 15px;
-  font-family: $alt-font-family;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-.primary-dropdown .dropdown-caption {
-  display: block;
-  color: $grey;
-  font-family: $alt-font-family;
-  font-size: 12px;
-  font-weight: 400;
+  .dropdown-caption {
+    display: block;
+    color: $grey;
+    font-family: $alt-font-family;
+    font-size: 12px;
+    font-weight: 400;
+  }
 }
