--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -13,7 +13,7 @@
   list-style: none;
   z-index: 1020;
 
-  @include animate-visibility;
+  @include animate-visibility(0.1);
   @include border-radius(3px);
   @include box-shadow(0 0 9px 2px rgba(0, 0, 0, 0.2));
 
