add tabs markup and style

--- a/lib/stylesheets/_utilities.scss
+++ b/lib/stylesheets/_utilities.scss
@@ -11,3 +11,15 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.quiet {
+  color: #999;
+  font-weight: normal;
+}
+
+%last-child {
+  & > *:last-child {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+}
