--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -38,7 +38,7 @@
 
 	  	& > a {
 	  		line-height: 1em;
-	  		padding: 8px 0;
+	  		padding: 8px 0 4px 0;
 				color: $nav-primary-link;
 				font-size: 18px;
 				font-weight: 400;
