Updating primary link hover

--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -61,5 +61,5 @@ $app-footer-height: 35px;
 // Patterns
 
 $nav-primary-link: #888;
-$nav-primary-link-hover: $red;
+$nav-primary-link-hover: $grey-darker;
 $nav-primary-link-active: $grey-darker;
