--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -48,6 +48,7 @@
 				border-bottom: 2px solid transparent;
 				&:hover {
 					color: $nav-primary-link-hover;
+					border-bottom: 2px solid $red;
 				}
 	  	}
 
