--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -1,17 +1,71 @@
-// Base
+// Color Palette
+
+// B&W
 
 $black: #000;
+$white: #fff;
+
+$grey: #999;
+
+$grey50: #e3e3e3;
+$grey100: #d8d8d8;
+$grey200: #ddd;
+$grey300: #ccc;
+$grey400: #999;
+$grey500: #666;
+$grey600: #333;
+
 $grey-darker: #333;
 $grey-dark: #666;
 $grey: #999;
 $grey-light: #ccc;
 $grey-lightest: #ddd;
-$white: #fff;
 
+// Red
 $red: #c40022;
+
+$red50: #f8dfe3;
+$red100: #de7083;
+$red200: #d81436;
+$red300: #ce0a2c;
+$red400: #c40022;
+$red500: #b50013;
+$red600: #a60004;
+
+// Yellow
 $yellow: #ff9d00;
+
+$yellow50: #ffedcf;
+$yellow100: #ffd477;
+$yellow200: #ffbb1e;
+$yellow300: #ffac0f;
+$yellow400: #ff9d00;
+$yellow500: #f08e00;
+$yellow600: #e17f00;
+
+// Green
 $green: #00a96d;
+
+$green50: #cfefe4;
+$green100: #72d6b3;
+$green200: #14bd81;
+$green300: #0ab377;
+$green400: #00a96d;
+$green500: #009a5e;
+$green600: #008b4f;
+
+// Blue
 $blue: #1e6ec1;
+
+$blue50: #d5e4f3;
+$blue100: #84b3e4;
+$blue200: #3282d5;
+$blue300: #2878cb;
+$blue400: #1e6ec1;
+$blue500: #1464b7;
+$blue600: #0a5aad;
+
+// Base
 
 $base-font-family: 'Helvetica Neue', sans-serif;
 $base-font-size: 13px;
