[Feature][37] Progress Bar

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -27,4 +27,5 @@
 @import "patterns/tooltip";
 @import "patterns/menus";
 @import "patterns/popover";
+@import "patterns/progress-bar";
 @import "patterns/status";
