--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -21,6 +21,7 @@
 @import "patterns/nav-primary";
 @import "patterns/nav-secondary";
 @import "patterns/nav-utility";
+@import "patterns/nav-fixed";
 @import "patterns/nav-tabs";
 @import "patterns/footer";
 @import "patterns/tooltip";
