--- a/lib/stylesheets/patterns/_main-responsive.scss
+++ b/lib/stylesheets/patterns/_main-responsive.scss
@@ -1,69 +1,53 @@
-@include at-breakpoint($xlarge){
+body.responsive {
+  @include at-breakpoint($xlarge){
 
-  .sidebar {
-    @include responsive(){
+    .sidebar {
       @include span-columns(4,18);
 
-      &.pull-right {
-        @include span-columns(4 omega,18);
-      }
-    }
-  }
-
-  .content {
-    @include responsive(){
-      @include reset-columns;
-
-      .sidebar + & {
+      & + .content {
         @include span-columns(14 omega,18);
       }
 
-      .sidebar.pull-right + & {
-        @include remove-omega;
+      &.pull-right {
+        @include span-columns(4 omega,18);
+
+        & + .content {
+          @include remove-omega;
+        }
       }
     }
+
+    .content {
+      @include reset-columns;
+    }
   }
-}
 
-@include at-breakpoint($medium){
+  @include at-breakpoint($medium){
 
-  .sidebar {
-    @include responsive(){
+    .sidebar {
       @include span-columns(3,10);
 
       &.pull-right {
         @include span-columns(3 omega,10);
-      }
-    }
-  }
 
-  .content {
-    @include responsive(){
-      .sidebar + & {
+        & + .content {
+          @include remove-omega;
+        }
+      }
+
+      & + .content {
         @include span-columns(7 omega,10);
       }
-
-      .sidebar.pull-right + & {
-        @include remove-omega;
-      }
     }
   }
-}
 
 
 
-@include at-breakpoint($small){
+  @include at-breakpoint($small){
 
-  .content, .sidebar + .content, .sidebar.pull-right + .content {
-    @include responsive(){
+    .content, .sidebar + .content, .sidebar.pull-right + .content, .sidebar, .sidebar.pull-right {
       display: block;
       @include reset-columns;
-    }
-  }
-
-  .sidebar {
-    @include responsive(){
-      display: none !important;
     }
   }
 
