--- a/lib/stylesheets/patterns/_list-tables.scss
+++ b/lib/stylesheets/patterns/_list-tables.scss
@@ -33,6 +33,12 @@
     padding: 10px;
   }
 
+  td > a.btn {
+    display: inline-block;
+    margin: 0;
+    padding: 2px 10px 1px;
+  }
+
   .table-status {
     padding: 0;
     width: 10px;
