--- a/lib/stylesheets/patterns/_nav-fixed.scss
+++ b/lib/stylesheets/patterns/_nav-fixed.scss
@@ -1,4 +1,10 @@
 .fixed-top {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+
 	&.nav-utility + .l-body {
 		padding-top: $app-nav-utility-height;
 	}
