--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -117,3 +117,13 @@ $app-footer-height: 35px;
 $nav-primary-link: #888;
 $nav-primary-link-hover: $grey-darker;
 $nav-primary-link-active: $grey-darker;
+
+// Z-index
+$zindexModal: 1230;
+$zindexModalOverlay: 1220;
+$zindexTooltip: 1210;
+$zindexMenu: 1200;
+$zindexNavUtility: 1120;
+$zindexNavPrimary: 1110;
+$zindexNavSecondary: 1100;
+$zindexPopovers: 1000;
