--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -6,7 +6,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	z-index: 1120;
+	z-index: $zindexNavUtility;
 
 	.l-container > .nav {
 		float: left;
