--- a/lib/stylesheets/patterns/_popover.scss
+++ b/lib/stylesheets/patterns/_popover.scss
@@ -1,7 +1,7 @@
 .popover {
   position: absolute;
   max-width: 700px;
-  z-index: 1050;
+  z-index: $zindexPopovers;
 
   @include box-shadow(1px 1px 5px 2px rgba(0, 0, 0, 0.4));
 }
@@ -10,7 +10,7 @@
   position: absolute;
   width: 20px;
   height: 20px;
-  z-index: 1040;
+  z-index: $zindexPopovers - 10;
   background-color: $white;
 
   @include box-shadow(1px 1px 5px 2px rgba(0, 0, 0, 0.4));
@@ -40,7 +40,7 @@
 .popover-content {
   position: relative;
   background-color: $white;
-  z-index: 1050;
+  z-index: $zindexPopovers;
 }
 
 .popover-body {
