--- a/lib/stylesheets/patterns/_content-view.scss
+++ b/lib/stylesheets/patterns/_content-view.scss
@@ -10,7 +10,7 @@
 
 .content-section-header {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   border-top: 1px solid #fff;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .content-section-title {
-  margin: 0 10px 0 0;
+  margin: 0;
   font-family: $alt-font-family;
   font-size: 22px;
   font-weight: 600;
@@ -56,7 +56,7 @@
 }
 
 .header-section-subtitle {
-  margin: 0 0 5px;
+  margin: 0 0 10px;
   color: $grey;
   font-size: 14px;
   font-weight: 700;
@@ -98,6 +98,7 @@
 }
 
 .collapsible-section.collapsed {
+    margin-bottom: 10px;
   .content-section-toggle {
     @include icon-sprite(section-toggle-collapsed);
   }
@@ -111,6 +112,7 @@
 }
 
 .collapsible-section.loading {
+    margin-bottom: 10px;
   .content-section-toggle {
     width: 16px;
     height: 16px;
