--- a/lib/stylesheets/_custom-fonts.scss
+++ b/lib/stylesheets/_custom-fonts.scss
@@ -11,6 +11,17 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
+  src: url('SourceSansPro-Regular-webfont.eot');
+  src: url('SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('SourceSansPro-Regular-webfont.woff') format('woff'),
+    url('SourceSansPro-Regular-webfont.ttf') format('truetype'),
+    url('SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
   src: url('SourceSansPro-Semibold-webfont.eot');
   src: url('SourceSansPro-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
     url('SourceSansPro-Semibold-webfont.woff') format('woff'),
