--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -1,8 +1,8 @@
 @import "compass";
 @import "compass/support";
 @import "custom-fonts";
-@import "compass/reset";
 @import "susy";
+@import "normalize-css/normalize";
 
 @import "settings";
 @import "mixins";
