--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -86,9 +86,8 @@ $grid-padding: 20px;
 // alternative layout breakpoints
 
 // not sure if needed but leaving it hear for now
-$legacy-support-for-ie  : true;
-$legacy-support-for-ie6 : $legacy-support-for-ie;
-$legacy-support-for-ie7 : $legacy-support-for-ie;
+$legacy-support-for-ie  : false;
+$legacy-support-for-ie8 : true;
 
 // Container Type
 $container-style: fluid;
