--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -15,48 +15,38 @@
 }
 
 .sidebar {
-  @include span-columns(3,12);
+  width: 280px;
+  float: left;
 
   .inner {
     padding: 0 30px 0 0;
 
     .panel & {
-      padding: 30px;
+      padding: 30px 30px 0 30px;
     }
   }
 
   &.pull-right {
-    @include span-columns(3 omega,12);
+    float: right;
 
     .inner {
       padding: 0 0 0 30px;
       .panel & {
-        padding: 30px;
+        padding: 30px 30px 0 30px;
       }
     }
   }
 }
 
 .content {
+  overflow: auto;
 
   .main & {
     min-height: 300px;
-    @include reset-columns;
+    margin-right: 280px;
   }
 
   .panel & {
     margin-top: -20px;
-  }
-
-  .main .sidebar + & {
-    @include span-columns(9 omega,12);
-  }
-
-  .main .sidebar + & {
-    @include span-columns(9 omega,12);
-  }
-
-  .main .sidebar.pull-right + & {
-    @include remove-omega;
   }
 }
