--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -41,8 +41,8 @@ h1, h2, h3 {
   line-height: $base-line-height * 1.5;
 }
 
-h4, h5, h6 {
-  font-weight: 700;
+h5, h6 {
+  font-weight: bold;
 }
 
 h1 {
@@ -63,6 +63,7 @@ h3 {
 
 h4 {
   font-size: 14px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
