updating content margins based on sidebar positions

--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -43,10 +43,18 @@
 
   .main & {
     min-height: 300px;
-    margin-right: 280px;
   }
 
   .panel & {
     margin-top: -20px;
+  }
+
+  .main .sidebar + & {
+    margin-left: 280px;
+  }
+
+  .main .sidebar.pull-right + & {
+    margin-right: 280px;
+    margin-left: 0;
   }
 }
