--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -85,7 +85,7 @@ $gutter-width: 0px;
 $grid-padding: 20px;
 // alternative layout breakpoints
 
-// not sure if needed but leaving it hear for now
+// Adds mixin support for IE8
 $legacy-support-for-ie  : false;
 $legacy-support-for-ie8 : true;
 
