--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -3,7 +3,11 @@ html, body {
 }
 
 body {
+  min-width: 1070px;
   @include noise;
+  &.responsive {
+    min-width: auto;
+  }
 }
 
 .l-wrapper {
@@ -25,22 +29,27 @@ body {
 
 .l-container {
   width: 1030px;
+  margin: 0 auto;
+  padding: 0 $small-padding;
   @include micro-clearfix;
-  @include container;
-
-  .sidebar-inner {
-    padding-left: 30px;
-
-    .rs-panel & {
-      padding: 0 30px;
-    }
-  }
 
   @include responsive(){
     width: auto;
     @include at-breakpoint($xlarge){
       & {
         padding: 0 $xlarge-padding;
+      }
+    }
+
+    @include at-breakpoint($large){
+      & {
+        padding: 0 $large-padding;
+      }
+    }
+
+    @include at-breakpoint($medium){
+      & {
+        padding: 0 $medium-padding;
       }
     }
 
